# fullstack-axum-dioxus

./: .gitignore  Cargo.toml  README.md
assets/: Cargo.toml  build.rs
components/: Cargo.toml  README.md
components/src/: lib.rs
db/: Cargo.toml  build.rs
db/src/: lib.rs
migrations/: 1729450028_create_users_table.up.sql  schema.sql
pages/: Cargo.toml
pages/src/: layout.rs  lib.rs  users.rs
server/: Cargo.toml
server/src/: main.rs  static_files.rs
