[package]
name = "components"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = "0.6.3"
js-sys = "0.3.80"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "console",
] }

[lib]
crate-type = ["cdylib", "rlib"]
