[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["json", "http1", "tokio"] }
db = { version = "0.1.0", path = "../db" }
dioxus = "0.5.6"
pages = { version = "0.1.0", path = "../pages" }
tokio = { version = "1", default-features = false, features = ["macros", "fs", "rt-multi-thread"] }
