[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
assets = { version = "0.1.0", path = "../assets" }
axum = { version = "0.8.4", default-features = false, features = [
    "json",
    "http1",
    "tokio",
] }
db = { version = "0.1.0", path = "../db" }
dioxus = "0.6.3"
pages = { version = "0.1.0", path = "../pages" }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "fs",
    "rt-multi-thread",
] }
